Colaboratory를 통해 생성됨

--- a/심층신경망.ipynb
+++ b/심층신경망.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1YL3d8frJK_H4QgJrUDYuNXsgKIWqKj1E",
-      "authorship_tag": "ABX9TyPFpxuxBW7+KxTtBmYdxbIj",
+      "authorship_tag": "ABX9TyOvN2YUC0p3f6v4UaOZCExQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 1,
       "metadata": {
         "id": "gdq3Ms4jOThj"
       },
@@ -66,9 +66,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DtBVMCmEO16A",
-        "outputId": "47628ce5-1ee1-4053-d7bf-236a72248c53"
+        "outputId": "1a0caaae-3be8-4966-f5d9-332f6da2d8d5"
       },
-      "execution_count": 18,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,9 +108,9 @@
           "height": 354
         },
         "id": "kfrKJlrfPHFn",
-        "outputId": "e8f05d84-8e0a-4d5f-fc5c-37235bafa5aa"
+        "outputId": "a71e3de7-e5f4-4eb1-c646-4c1e5ad7efd8"
       },
-      "execution_count": 21,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
       "metadata": {
         "id": "DkCpm9bRP6_i"
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
       "metadata": {
         "id": "X0Kg981EQXo_"
       },
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -241,24 +241,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JerdC4U8RgeP",
-        "outputId": "bdb5ac4d-c433-494f-f567-6f2ab19578e3"
+        "outputId": "ca6921b1-6d93-4f3f-b3e9-b6525b761605"
       },
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0 tensor(1.1058, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-            "Accuracy of Test Data : 66.29999542236328\n",
-            "1 tensor(0.5261, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-            "Accuracy of Test Data : 70.81999969482422\n",
-            "2 tensor(0.6251, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-            "Accuracy of Test Data : 72.81999969482422\n",
-            "3 tensor(0.3115, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-            "Accuracy of Test Data : 72.48999786376953\n",
-            "4 tensor(0.4103, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-            "Accuracy of Test Data : 73.3699951171875\n"
+            "0 tensor(0.7205, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+            "Accuracy of Test Data : 67.9000015258789\n",
+            "1 tensor(0.3518, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+            "Accuracy of Test Data : 71.54999542236328\n",
+            "2 tensor(0.6250, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+            "Accuracy of Test Data : 72.23999786376953\n",
+            "3 tensor(0.6006, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+            "Accuracy of Test Data : 73.72000122070312\n",
+            "4 tensor(0.2592, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+            "Accuracy of Test Data : 73.38999938964844\n"
           ]
         }
       ]
@@ -277,15 +277,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wu8IGGqqSGih",
-        "outputId": "a9ae26ee-7eee-4fa6-bd9d-5cdafcd418f3"
+        "outputId": "a3486039-a393-4cd9-ac14-9e226ec0e57a"
       },
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy of Test Data : 75.79000091552734\n"
+            "Accuracy of Test Data : 75.68000030517578\n"
           ]
         }
       ]
@@ -301,17 +301,53 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pMkH_SrdbOYc",
-        "outputId": "df708f41-d1ef-4113-f6e1-6e59d89cae52"
+        "outputId": "eb58f7b2-946d-4198-a35b-a46c57388eb4"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "73.3699951171875\n",
-            "4\n"
+            "73.72000122070312\n",
+            "3\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model2 = torch.load('./drive/MyDrive/nets/result76.19_leaky.pkl')\n",
+        "model2.cuda()\n",
+        "\n",
+        "ComputeAccr(test_loader, model2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xPIvzUO0iFPl",
+        "outputId": "cc823455-b38a-4b82-9ea0-8728fe5df6e3"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy of Test Data : 76.19999694824219\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(76.2000, device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
         }
       ]
     }
